images layout shifts and icon links aria-label fix

--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,7 @@ section[aria-label="intro"]
 {
   border-radius: 50%;
   width: 60%;
+  height: auto;
   box-shadow: -5px 7px 0px 0px var(--clr-text);
 }
 
