--- a/src/components/CV/CV.module.css
+++ b/src/components/CV/CV.module.css
@@ -4,6 +4,7 @@
   color: hsla(var(--clr-black));
   aspect-ratio: 1 / 1.4142;
   width: 90%;
+  height: auto;
   /* padding: 3%; */
   margin-bottom: 1.1em;
   
